# nix-term

./: .gitignore  LICENSE  NEWS  README.md  meson.build  meson_options.txt  org.gnome.Ptyxis.Devel.json  ptyxis.doap
agent/: meson.build  org.gnome.Ptyxis.Agent.xml  ptyxis-agent-compat.h  ptyxis-agent-impl.c  ptyxis-agent-impl.h  ptyxis-agent-util.c  ptyxis-agent-util.h  ptyxis-agent.c  ptyxis-container-provider.c  ptyxis-container-provider.h  ptyxis-distrobox-container.c  ptyxis-distrobox-container.h  ptyxis-podman-container.c  ptyxis-podman-container.h  ptyxis-podman-provider-private.h  ptyxis-podman-provider.c  ptyxis-podman-provider.h  ptyxis-process-impl.c  ptyxis-process-impl.h  ptyxis-run-context.c  ptyxis-run-context.h  ptyxis-session-container.c  ptyxis-session-container.h  ptyxis-toolbox-container.c  ptyxis-toolbox-container.h  ptyxis-unix-fd-map.c  ptyxis-unix-fd-map.h
data/: meson.build  org.gnome.Ptyxis.desktop.in.in  org.gnome.Ptyxis.metainfo.xml.in.in  org.gnome.Ptyxis.service.in
data/icons/: meson.build
data/palettes/: README.md  sonokai.palette  spacedust.palette
man/: meson.build  ptyxis.1.in
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  de.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  meson.build  nb.po  nl.po  oc.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: gdkhslaprivate.h  main.c  meson.build  org.gnome.Ptyxis.gschema.xml.in  ptyxis-action-group.h  ptyxis-add-button-list-item.c  ptyxis-add-button-list-item.h  ptyxis-add-button-list-model.c  ptyxis-add-button-list-model.h  ptyxis-application.c  ptyxis-application.h  ptyxis-build-ident.h.in  ptyxis-client.c  ptyxis-client.h  ptyxis-close-dialog.c  ptyxis-close-dialog.h  ptyxis-custom-link-editor.c  ptyxis-custom-link-editor.h  ptyxis-custom-link-editor.ui  ptyxis-custom-link-row.c  ptyxis-custom-link-row.h  ptyxis-custom-link-row.ui  ptyxis-custom-link.c  ptyxis-custom-link.h  ptyxis-find-bar.c  ptyxis-find-bar.h  ptyxis-find-bar.ui  ptyxis-fullscreen-box.c  ptyxis-fullscreen-box.h  ptyxis-gated-list-model.c  ptyxis-gated-list-model.h  ptyxis-inspector.c  ptyxis-inspector.h  ptyxis-inspector.ui  ptyxis-menu-row.c  ptyxis-menu-row.h  ptyxis-menu-row.ui  ptyxis-palette-preview-color.c  ptyxis-palette-preview-color.h  ptyxis-palette-preview.c  (+64 more)
src/palettes/: 3024.palette  Aci.palette  Aco.palette  Adventure Time.palette  Afterglow.palette  Alien Blood.palette  Apprentice.palette  Argonaut.palette  Arthur.palette  Atom.palette  Aura.palette  Ayu Mirage.palette  Ayu.palette  Azu.palette  Belafonte.palette  Bim.palette  Birds Of Paradise.palette  Blazer.palette  Bluloco Light.palette  Bluloco Zsh Light.palette  Borland.palette  Breath Silverfox.palette  Breath.palette  Breeze.palette  Broadcast.palette  Brogrammer.palette  C64.palette  Cai.palette  Catppuccin Frappé.palette  Catppuccin Latte.palette  Catppuccin Macchiato.palette  Catppuccin Mocha.palette  Chalk.palette  Chalkboard.palette  Chameleon.palette  Clrs.palette  Cobalt 2.palette  Cobalt Neon.palette  Colorcli.palette  Crayon Pony Fish.palette  (+202 more)
subprojects/: .gitignore  fmt.wrap  simdutf.wrap  vte.wrap
testsuite/: meson.build  test-podman.c
testsuite/podman/: test1.json  test2.json
