option('development', type: 'boolean', value: false, description: 'If this is a development build')
option('generic', type: 'combo', value: 'ptyxis',
       choices: ['ptyxis', 'terminal', 'builder'],
       description: 'How the application should be named')
option('app-id', type: 'string', value: '', description: 'An alternate app-id to use for the application')
option('gschema-id', type: 'string', value: '', description: 'An alternative gschema identifier prefix')
option('gschema-path', type: 'string', value: '', description: 'An alternative gschema path to use')

# Building with libc-compat is generally just useful when building the Flatpak
# since that is where we will want to build a binary that can run on the host
# outside of the Flatpak container.
option('libc-compat', type: 'boolean', value: false, description: 'Try to build the agent with old glibc symbols for running on older hosts')
